# fdp-mcp-server

./: .dockerignore  Dockerfile  LICENSE  README-zh_CN.md  README.md  docker-entrypoint.sh  pyproject.toml  smithery.yaml
src/fdp_mcp_server/: __main__.py  proxy_server.py  streamable_client.py
